# sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  COPYRIGHT  Cargo.toml  Dockerfile  Makefile  Makefile.toml  OVERVIEW.md  README.md  RELEASE.md  SECURITY.md  TEST.md  clippy.toml  compose.yaml  coverage.toml  coverage_grcov.makefile.toml  deny.toml  pubspec.yaml  rust-toolchain.toml  typeshare.toml
crates/account/: Cargo.toml
crates/account/src/: account.rs  account_switcher.rs  builder.rs  convert.rs  error.rs  folder_sync.rs  lib.rs  local_account.rs  sync.rs  traits.rs  types.rs
crates/account/src/archive/: backup.rs  mod.rs  zip.rs
crates/account_extras/: Cargo.toml
crates/account_extras/src/: clipboard.rs  error.rs  lib.rs  preferences.rs  security_report.rs  system_messages.rs
crates/account_extras/tests/: clipboard.rs
crates/archive/: Cargo.toml
crates/archive/src/: error.rs  lib.rs  reader.rs  writer.rs
crates/audit/: Cargo.toml
crates/audit/src/: encoding.rs  error.rs  event.rs  lib.rs  log_file.rs  stream.rs
crates/audit/src/fs/: log_file.rs  mod.rs  stream.rs
crates/backend/: Cargo.toml
crates/backend/src/: access_point.rs  archive.rs  audit.rs  audit_provider.rs  compact.rs  error.rs  event_log.rs  folder.rs  gate_keeper.rs  helpers.rs  lib.rs  preferences.rs  search.rs  server_origins.rs  system_messages.rs  vault_writer.rs
crates/backend/src/folder/: filesystem.rs  folder.rs  mod.rs
crates/backend/src/reducers/: device.rs  files.rs  folder.rs  mod.rs
crates/backup_archive/: Cargo.toml
crates/backup_archive/src/: error.rs  lib.rs  types.rs
crates/backup_archive/src/v1/: backup.rs  mod.rs  zip.rs
crates/backup_archive/src/zip/: backup.rs  mod.rs  zip.rs
crates/changes/: Cargo.toml
crates/changes/src/: consumer.rs  error.rs  lib.rs  producer.rs
crates/cli_helpers/: Cargo.toml
crates/cli_helpers/src/: lib.rs  messages.rs
crates/clipboard/: Cargo.toml  build.rs
crates/clipboard/src/: android.rs  desktop.rs  error.rs  ios.rs  lib.rs
crates/clipboard/tests/: clipboard.rs
crates/core/: Cargo.toml
crates/core/src/: account.rs  constants.rs  date_time.rs  device.rs  error.rs  file.rs  file_identity.rs  identity.rs  lib.rs  origin.rs  paths.rs  sharing.rs
crates/core/src/commit/: mod.rs  proof.rs  tree.rs
crates/core/src/crypto/: key_derivation.rs  mod.rs  private_key.rs
crates/core/src/encoding/: mod.rs
crates/core/src/events/: account.rs  change.rs  device.rs  event.rs  event_kind.rs  event_log.rs  file.rs  mod.rs  patch.rs  read.rs  record.rs  write.rs
crates/database/: Cargo.toml
crates/database/sql_migrations/: V1__base.sql  V2__global_config.sql  V3__shared_folders.sql
crates/database/src/: audit_provider.rs  db.rs  error.rs  event_log.rs  files.rs  importer.rs  lib.rs  migrations.rs  preferences.rs  search.rs  server_origins.rs  system_messages.rs  traits.rs  upgrader.rs  vault_writer.rs
crates/database/src/archive/: archive.rs  error.rs  export.rs  import.rs  mod.rs  types.rs  zip.rs
crates/database/src/db/: account.rs  audit.rs  event.rs  file.rs  folder.rs  import.rs  mod.rs  preference.rs  server.rs  system_message.rs
crates/database/src/entity/: account.rs  audit.rs  event.rs  folder.rs  mod.rs  preference.rs  server.rs  shared_folder.rs  system_message.rs
crates/database/src/storage/: client.rs  mod.rs
crates/database/src/upgrader/: db_import.rs  mod.rs
crates/database_upgrader/: Cargo.toml
crates/database_upgrader/src/: archive.rs  error.rs  lib.rs
crates/database_upgrader/src/upgrader/: db_import.rs  mod.rs
crates/debug_snapshot/: Cargo.toml
crates/debug_snapshot/src/: error.rs  lib.rs
crates/extension_service/: Cargo.toml
crates/extension_service/src/: lib.rs  main.rs
crates/external_files/: Cargo.toml  build.rs
crates/external_files/src/: file_helpers.rs  lib.rs  types.rs
crates/filesystem/: Cargo.toml
crates/filesystem/src/: advisory_locks.rs  audit_provider.rs  error.rs  event_log.rs  lib.rs  preferences.rs  server_origins.rs  system_messages.rs  vault_writer.rs
crates/integration_tests/: Cargo.toml
crates/integration_tests/src/: lib.rs  test_extension_helper.rs  test_native_bridge.rs  test_preferences_concurrency.rs
crates/integrity/: Cargo.toml
crates/integrity/src/: account_integrity.rs  error.rs  event_integrity.rs  file_integrity.rs  lib.rs  vault_integrity.rs
crates/integrity/tests/: integrity.rs
crates/ipc/: Cargo.toml  build.rs
crates/ipc/src/: client.rs  codec.rs  compression.rs  error.rs  io.rs  lib.rs  local_transport.rs  memory.rs  memory_server.rs  native_bridge.rs  server.rs  service.rs
crates/ipc/src/bindings/: mod.rs  (+4 more)
crates/ipc/tests/: list_authenticated_accounts.rs  listen_connect.rs
crates/keychain_parser/: CHANGELOG.md  Cargo.toml  README.md
crates/keychain_parser/src/: lib.rs  parser.rs
crates/login/: Cargo.toml
crates/login/src/: delegated_access.rs  device.rs  error.rs  identity.rs  identity_folder.rs  lib.rs  private_identity.rs  public_identity.rs
crates/logs/: Cargo.toml
crates/logs/src/: error.rs  lib.rs  logger.rs
crates/migrate/: Cargo.toml
crates/migrate/src/: error.rs  export.rs  lib.rs
crates/migrate/tests/: migrate_export.rs
crates/net/: CHANGELOG.md  Cargo.toml  build.rs
crates/net/src/: commits.rs  error.rs  lib.rs  relay.rs  sync.rs
crates/net/tests/: encode_decode.rs
crates/password/: Cargo.toml
crates/password/src/: diceware.rs  error.rs  generator.rs  lib.rs  memorable.rs
crates/platform_authenticator/: Cargo.toml
crates/platform_authenticator/examples/: local_auth.rs
crates/platform_authenticator/src/: error.rs  keyring_password.rs  lib.rs  local_auth.rs
crates/preferences/: Cargo.toml
crates/preferences/src/: error.rs  lib.rs  preferences.rs
crates/protocol/: CHANGELOG.md  Cargo.toml  build.rs
crates/protocol/src/: compression.rs  constants.rs  diff.rs  error.rs  hashcheck.rs  lib.rs  local_integration.rs  local_transport.rs  query.rs  server_helpers.rs  traits.rs  transfer.rs
crates/recovery/: Cargo.toml
crates/recovery/src/: encoding.rs  error.rs  lib.rs  recovery.rs
(+2356 files in other folders)
