[workspace]
resolver = "2"
members = [
  "crates/account",
  "crates/account_extras",
  "crates/artifact",
  "crates/cli_helpers", 
  "crates/clipboard", 
  "crates/core",
  "crates/database",
  "crates/keychain_parser",
  "crates/integration_tests",
  "crates/ipc",
  "crates/migrate",
  "crates/net",
  "crates/platform_authenticator",
  "crates/protocol",
  "crates/sdk",
  "crates/server",
  "crates/sos",
  "crates/test_utils",
  "crates/vfs", 
  "crates/web", 
]

[workspace.dependencies]
sos-account = { version = "0.16", path = "crates/account" }
sos-account-extras = { version = "0.16", path = "crates/account_extras" }
sos-core = { version = "0.16", path = "crates/core" }
sos-ipc = { version = "0.16", path = "crates/ipc" }
sos-web = { version = "0.16", path = "crates/web" }
sos-sdk = { version = "0.16", path = "crates/sdk" }
sos-migrate = { version = "0.16", path = "crates/migrate" }
sos-database = { version = "0.16", path = "crates/database" }
sos-protocol = { version = "0.16", path = "crates/protocol" }
sos-net = { version = "0.16", path = "crates/net" }
sos-vfs = { version = "0.2.2", path = "crates/vfs" }
sos-test-utils = { path = "crates/test_utils" }

keychain_parser = { version = "0.1", path = "crates/keychain_parser" }
xclipboard  = { version = "0.16", path = "crates/clipboard" }

reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"]}
async-stream = "0.3"

age = { version = "0.11", features = ["async"] }
totp-rs = { version = "5.5", features = ["qr", "serde_support", "zeroize"] }

async-fd-lock = "0.2"
thiserror = "2"
anyhow = "1"
zstd = "0.13"
flate2 = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"]}
serde_json = "1"
serde_with = { version = "3", features = ["base64"] }
tokio-util = { version = "0.7", default-features = false, features = ["io", "compat"] }
async-trait = "0.1"
async-recursion = "1"
typeshare = "1"
http = "1"
uuid = { version = "1", features = ["serde", "v4"] }
hex = { version = "0.4", features = ["serde"] }
k256 = { version = "0.13.1", features = ["ecdsa"] }
# matches the version in k256
sha1 = "0.10.6"
sha2 = "0.10.6"
sha3 = "0.10.6"
once_cell = "1"
rand = "0.8"
url = { version = "2", features = ["serde"] }
time = { version = "0.3.19", features = ["serde-human-readable", "local-offset", "wasm-bindgen"] }
time-tz = { version = "2", features = ["system"] }
futures = "0.3"
bs58 = "0.4"
urlencoding = "2"
parking_lot = "0.12"
indexmap = { version = "2.2", features = ["serde"] }
toml = "0.8"
bitflags = { version = "2", features = ["serde"] }
enum-iterator = "2"
tempfile = "3.5"
prost = "0.13"
clap = { version = "4.3.19", features = ["derive", "wrap_help", "env"] }
colored = "2"
arboard = { version = "3", default-features = false }
zeroize = "1"
bytes = "1.8"
serde_json_path = "0.7"
base64 = "0.22"
notify = { version = "7", features = ["serde"]}
walkdir = "2"
async_zip = { version = "0.0.17", default-features = false, features = ["deflate", "tokio"] }
csv-async = { version = "1", features = ["tokio", "with_serde"] }
futures-util = "0.3"
sanitize-filename = "0.6"
vcard4 = { version = "0.7.1", features = ["serde"] }
mime_guess = "2"

axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
keyring = { version = "3.5", features = ["apple-native", "windows-native", "sync-secret-service"] }

[workspace.dependencies.rs_merkle]
version = "1.4.2"

[workspace.dependencies.binary-stream]
version = "9.1.0"
features = ["async"]
#path = "../../../../binary-stream"

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = "z"
