[workspace]
resolver = "2"
members = [
  "crates/account",
  "crates/archive",
  "crates/artifact",
  "crates/audit",
  "crates/backend",
  "crates/cli_helpers", 
  "crates/clipboard", 
  "crates/core",
  "crates/database",
  "crates/database_upgrader",
  "crates/extension_service",
  "crates/external_files",
  "crates/filesystem",
  "crates/keychain_parser",
  "crates/integrity",
  "crates/ipc",
  "crates/login",
  "crates/logs",
  "crates/migrate",
  "crates/net",
  "crates/password",
  "crates/platform_authenticator",
  "crates/preferences",
  "crates/protocol",
  # "crates/recovery",
  "crates/reducers",
  "crates/remote_sync", 
  "crates/sdk",
  "crates/search",
  "crates/security_report",
  "crates/server",
  "crates/signer", 
  "crates/sos",
  "crates/storage/client",
  "crates/storage/server",
  "crates/sync",  
  "crates/system_messages", 
  "crates/vfs", 
  "crates/web",   
  "crates/vault",

  "tests/command_line",
  "tests/integration",
  "tests/unit",
  "tests/utils", 
]

[workspace.dependencies]
sos-account = { version = "0.17", path = "crates/account" }
sos-artifact = { version = "0.8", path = "crates/artifact" }
sos-audit = { version = "0.17", path = "crates/audit" }
sos-archive = { version = "0.17", path = "crates/archive" }
sos-backend  = { version = "0.17", path = "crates/backend" }
sos-cli-helpers = { version = "0.1", path = "crates/cli_helpers" }
sos-core = { version = "0.17", path = "crates/core" }
sos-database = { version = "0.17", path = "crates/database" }
sos-database-upgrader = { version = "0.17", path = "crates/database_upgrader" }
sos-external-files = { version = "0.17.0", path = "crates/external_files" }
sos-filesystem = { version = "0.17", path = "crates/filesystem" }
sos-integrity = { version = "0.17", path = "crates/integrity" }
sos-ipc = { version = "0.17", path = "crates/ipc" }
sos-login = { version = "0.17", path = "crates/login" }
sos-logs = { version = "0.17", path = "crates/logs" }
sos-migrate = { version = "0.17", path = "crates/migrate" }
sos-net = { version = "0.17", path = "crates/net" }
sos-password = { version = "0.17", path = "crates/password" }
sos-platform-authenticator = { version = "0.17", path = "crates/platform_authenticator" }
sos-protocol = { version = "0.17", path = "crates/protocol" }
# sos-recovery = { version = "0.16", path = "crates/recovery" }
sos-reducers = { version = "0.17", path = "crates/reducers" }
sos-remote-sync = { version = "0.17", path = "crates/remote_sync" }
sos-search = { version = "0.17", path = "crates/search" }
sos-server = { version = "0.17", path = "crates/server" }
sos-security-report = { version = "0.17", path = "crates/security_report" }
sos-system-messages = { version = "0.17", path = "crates/system_messages" }
sos-client-storage = { version = "0.17", path = "crates/storage/client" }
sos-server-storage = { version = "0.17", path = "crates/storage/server" }
sos-preferences = { version = "0.17", path = "crates/preferences" }
sos-signer = { version = "0.17", path = "crates/signer" }
sos-sync = { version = "0.17", path = "crates/sync" }
sos-sdk = { version = "0.17", path = "crates/sdk" }
sos-vfs = { version = "0.2", path = "crates/vfs" }
sos-web = { version = "0.17", path = "crates/web" }
sos-vault = { version = "0.17", path = "crates/vault" }

sos-test-utils = { path = "tests/utils" }

keychain_parser = { version = "0.1", path = "crates/keychain_parser" }
xclipboard  = { version = "0.16", path = "crates/clipboard" }

# core
rs_merkle = "1.4.2"

# password
zxcvbn = { version = "3.0.1", features = ["ser"] }
chbs = "0.1.1"

reqwest = { version = "0.12.5", default-features = false }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"]}

age = { version = "0.11", features = ["async"] }
argon2 = { version = "0.5", features = ["std"]}
totp-rs = { version = "5.5", features = ["qr", "serde_support", "zeroize"] }
aes-gcm = { version = "0.10.1", features = ["std"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
balloon-hash = { version = "0.4", features = ["std"]}
pem = { version = "3", features = ["serde"] }
snow = "0.9"

urn = { version = "0.7", features = ["serde"] }
async-fd-lock = "0.2"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

tokio = { version = "1", features = ["rt", "macros", "time", "sync"]}
tokio-util = { version = "0.7", default-features = false, features = ["io", "compat"] }
tokio-stream = "0.1"

serde_json = "1"
serde_with = { version = "3", features = ["base64"] }
async-trait = "0.1"
async-recursion = "1"
typeshare = "1"
http = "1"
uuid = { version = "1", features = ["serde", "v4"] }
hex = { version = "0.4", features = ["serde"] }

# signing
k256 = { version = "0.13.1", features = ["ecdsa"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }

# matches the version in k256
sha1 = "0.10.6"
sha2 = "0.10.6"
sha3 = "0.10.6"
rand = "0.8"
semver = { version = "1", features = ["serde"] }
url = { version = "2", features = ["serde"] }
time = { version = "0.3.19", features = ["serde-human-readable", "local-offset", "wasm-bindgen"] }
time-tz = { version = "2", features = ["system"] }
futures = "0.3"
bs58 = "0.4"
urlencoding = "2"
parking_lot = "0.12"
indexmap = { version = "2.2", features = ["serde"] }
toml = "0.8"
bitflags = { version = "2", features = ["serde"] }
enum-iterator = "2"
tempfile = "3.5"
prost = "0.13"
clap = { version = "4.3.19", features = ["derive", "wrap_help", "env"] }
colored = "2"
arboard = { version = "3", default-features = false }
zeroize = "1"
bytes = "1.8"
serde_json_path = "0.7"
base64 = "0.22"
notify = { version = "7", features = ["serde"]}
walkdir = "2"
async_zip = { version = "0.0.17", default-features = false, features = ["deflate", "tokio"] }
csv-async = { version = "1", features = ["tokio", "with_serde"] }
futures-util = "0.3"
sanitize-filename = "0.6"
vcard4 = { version = "0.7.1", features = ["serde"] }
mime_guess = "2"
etcetera = "0.8"

axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
keyring = { version = "3.5", features = ["apple-native", "windows-native", "sync-secret-service"] }

# logs
tracing-appender = "0.2"
rev_buf_reader = "0.3"

# search
unicode-segmentation = "1.10"
probly-search = "2.0.1"

# database
async-sqlite = "0.4"
refinery = { version = "0.8.15", features = ["rusqlite"] }
sql_query_builder = { version = "2", features = ["sqlite"]}

# keychain parser
logos = { version = "0.15", features = ["export_derive"] }
plist = "1.7"

# recovery
vsss-rs = "3"

# wasm
getrandom = "0.2"

# build
rustc_version = "0.4.1"
prost-build = "0.13"
protoc-bin-vendored = "3"

[workspace.dependencies.binary-stream]
version = "10"
features = ["async", "tokio"]
#path = "../../../../binary-stream"

[profile.release]
codegen-units = 1
lto = true
strip = true
opt-level = "z"
