[package]
name = "sos-account"
version = "0.16.0"
edition = "2021"
description = "Local accounts for the Save Our Secrets SDK"
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
full = [
  "audit",
  "archive",
  "clipboard",
  "contacts",
  "files",
  "migrate",
  "search",
]
audit = ["sos-sdk/audit", "sos-database/audit"]
archive = [
  "sos-sdk/archive",
  "sos-database/archive",
  "dep:async_zip",
  "dep:walkdir",
  "dep:tokio-util",
  "dep:sanitize-filename",
  "dep:futures-util",
  "dep:sha2",
]
clipboard = ["dep:xclipboard", "dep:serde_json_path", "dep:time-tz"]
contacts = ["dep:vcard4"]
migrate = ["sos-migrate"]
files =["sos-sdk/files", "sos-database/files", "dep:walkdir"]
search =["sos-database/search"]

[dependencies]
sos-core.workspace = true
sos-sdk.workspace = true
sos-database.workspace = true
sos-sync.workspace = true
sos-migrate = { workspace = true, optional = true }

thiserror.workspace = true
secrecy.workspace = true
serde.workspace = true
tracing.workspace = true
typeshare.workspace = true
async-trait.workspace = true
futures.workspace = true
indexmap.workspace = true
uuid.workspace = true
time.workspace = true
hex.workspace = true
serde_json.workspace = true

sha2 = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
async_zip = { workspace = true, optional = true }
xclipboard = { workspace = true, optional = true }
serde_json_path = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }
tokio = { version = "1", default-features = false, features = ["rt", "sync", "macros", "io-util"] }
sanitize-filename = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
vcard4 = { workspace = true, optional = true }
time-tz = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true

[build-dependencies]
rustc_version.workspace = true
