[package]
name = "sos-account-extras"
version = "0.16.2"
edition = "2021"
description = "Extra features for Save Our Secrets local accounts."
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
preferences = []
security-report = []
system-messages = []

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tokio.workspace = true
tracing.workspace = true

[dependencies.sos-sdk]
version = "0.16"
path = "../sdk"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[build-dependencies]
rustc_version = "0.4.1"
