[package]
name = "sos-audit"
version = "0.16.0"
edition = "2021"

[dependencies]
sos-core.workspace = true
sos-filesystem.workspace = true
sos-signer.workspace = true
sos-vault.workspace = true
sos-vfs.workspace = true

thiserror.workspace = true
async-trait.workspace = true
bitflags.workspace = true
serde.workspace = true
futures.workspace = true
binary-stream.workspace = true
tokio-util.workspace = true
tokio.workspace = true
