[package]
name = "sos-audit"
version = "0.17.1"
edition = "2021"
description = "Audit trail for the Save Our Secrets SDK"
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[dependencies]
sos-core.workspace = true
sos-vfs.workspace = true

async-trait.workspace = true
bitflags.workspace = true
serde.workspace = true
futures.workspace = true
binary-stream.workspace = true
tokio.workspace = true
