[package]
name = "sos-backend"
version = "0.16.0"
edition = "2021"
description = "Backend storage abstraction for the Save Our Secrets SDK"
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"

[features]
full = ["files", "search"]
files = [
  "sos-core/files",
  "sos-database/files",
  "sos-filesystem/files",
]
search = [
  "dep:serde",
  "dep:probly-search",
  "dep:unicode-segmentation",
  "dep:url",
  "dep:vcard4",
]

[dependencies]
sos-core.workspace = true
sos-database.workspace = true
sos-filesystem.workspace = true
sos-vault.workspace = true
sos-vfs.workspace = true

thiserror.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
binary-stream.workspace = true
uuid.workspace = true
tracing.workspace = true
indexmap.workspace = true
tempfile.workspace = true
typeshare.workspace = true

# search
serde = { workspace = true, optional = true }
unicode-segmentation = { workspace = true, optional = true }
probly-search = { workspace = true, optional = true }
url  = { workspace = true, optional = true }
vcard4 = { workspace = true, optional = true }
