[package]
name = "sos-backup-archive"
version = "0.16.0"
edition = "2021"
description = "Read and write backup archives for the Save Our Secrets SDK."
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[features]
full = ["zip"]
zip = [
  "sos-filesystem",
  "sos-login",
  "sos-vfs",
  "serde_json",
  "uuid",
  "async-trait",
  "futures",
  "async_zip",
  "walkdir",
  "tokio",
  "tokio-util",
  "sanitize-filename",
  "futures-util",
  "sha2",
  "hex",
  "time",
  "secrecy",
  "tempfile",
]

[dependencies]
sos-core.workspace = true
sos-vault.workspace = true
thiserror.workspace = true
serde.workspace = true

sos-filesystem = { workspace = true, optional = true }
sos-login = { workspace = true, optional = true }
sos-vfs = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
time = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
async_zip = { workspace = true, optional = true }
walkdir = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
sanitize-filename = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

[build-dependencies]
rustc_version.workspace = true
