[package]
name = "sos-backup-archive"
version = "0.16.0"
edition = "2021"
description = "Read and write backup archives for the Save Our Secrets SDK."
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[dependencies]
sos-core.workspace = true
sos-backend.workspace = true
sos-vault.workspace = true
thiserror.workspace = true
sos-filesystem.workspace = true
sos-login.workspace = true
sos-vfs.workspace = true

serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
async-trait.workspace = true
futures.workspace = true
sha2.workspace = true
hex.workspace = true
time.workspace = true
secrecy.workspace = true
tokio-util.workspace = true
async_zip.workspace = true
walkdir.workspace = true
tokio.workspace = true
sanitize-filename.workspace = true
futures-util.workspace = true
tempfile.workspace = true

[build-dependencies]
rustc_version.workspace = true
