[package]
name = "sos-cli-helpers"
version = "0.1.3"
edition = "2024"
description = "Shared helpers for command line executables."
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
authors = ["saveoursecrets-developers <dev@saveoursecrets.com>"]

[dependencies]
serde.workspace = true
clap.workspace = true
colored.workspace = true
