[package]
name = "xclipboard"
version = "0.16.2"
edition = "2021"
description = "Cross-platform clipboard with extra features."
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zeroize = { workspace = true }

[target.'cfg(all(not(target_os = "android"), not(target_os = "ios")))'.dependencies.arboard]
workspace = true

[build-dependencies]
rustc_version.workspace = true
