[package]
name = "sos-core"
version = "0.16.0"
edition = "2021"
description = "Core types for the Save Our Secrets SDK"
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

# [features]
# default = ["audit"]
# audit = []

[dependencies]
thiserror.workspace = true
serde.workspace = true
url.workspace = true
rs_merkle.workspace = true
hex.workspace = true
mime_guess.workspace = true
uuid.workspace = true

[build-dependencies]
rustc_version = "0.4.1"
