[package]
name = "sos-core"
version = "0.16.0"
edition = "2021"
description = "Core types for the Save Our Secrets SDK"
homepage = "https://saveoursecrets.com"
license = "MIT OR Apache-2.0"
repository = "https://github.com/saveoursecrets/sdk"

[features]
full = ["files"]
files = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
url.workspace = true
rs_merkle.workspace = true
hex.workspace = true
mime_guess.workspace = true
uuid.workspace = true
rand.workspace = true
binary-stream.workspace = true
futures.workspace = true
time.workspace = true
time-tz.workspace = true
async-trait.workspace = true
once_cell.workspace = true
serde_json.workspace = true
bs58.workspace = true
bitflags.workspace = true
secrecy.workspace = true
serde_with.workspace = true

# crypto
sha2.workspace = true
pem.workspace = true
age.workspace = true
argon2.workspace = true
aes-gcm.workspace = true
chacha20poly1305.workspace = true
balloon-hash.workspace = true

[build-dependencies]
rustc_version.workspace = true
